fix: added condition for quotation visibility in the first card

--- a/junior/testimonials-grid-section/style.css
+++ b/junior/testimonials-grid-section/style.css
@@ -108,9 +108,6 @@ main.testimonials {
 
 .testimonial-1 {
   background-color: var(--purple-500);
-  background-image: url("images/bg-pattern-quotation.svg");
-  background-repeat: no-repeat;
-  background-position: top 0 right 4rem;
   color: var(--purple-50);
   grid-area: one;
 
@@ -155,12 +152,11 @@ main.testimonials {
   grid-area: five;
 }
 
-@media (min-width: 1000px) {
-  main.testimonials {
-    grid-template-areas:
-      "one one two five"
-      "three four four five"
-    ;
+@media screen and (min-width: 500px) {
+  .testimonial-1 {
+    background-image: url("images/bg-pattern-quotation.svg");
+    background-repeat: no-repeat;
+    background-position: top 0 right 4rem;
   }
 }
 
@@ -170,7 +166,14 @@ main.testimonials {
       "one one"
       "two three"
       "four four"
-      "five five"
-    ;
+      "five five";
+  }
+}
+
+@media (min-width: 1000px) {
+  main.testimonials {
+    grid-template-areas:
+      "one one two five"
+      "three four four five";
   }
 }
